PyQuest/src/test/semantic_analysis/valid/test004.ql
// Identifier declared after reference in computed question
form testForm {
	"First Question"
	anotherIdentifier : integer = testIdentifier + 1
	"Second Question"
	testIdentifier : integer
}